tests/fixtures/invalid/pow_none_str_list.py
# Cannot call pow() with None, Str, List[int]
x = pow(None, "hello", [1, 2, 3])
